build(npm): add npm scripts for backstop

--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.2",
   "description": "CSS and style guide for iambacon.co.uk",
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "backstop:approve": "backstop approve",
+    "backstop:test": "backstop test",
+    "backstop:init": "backstop init"
   },
   "repository": {
     "type": "git",
