--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
     "@lodder/grunt-postcss": "^3.1.1",
     "autoprefixer": "^10.4.0",
-    "backstopjs": "^6.0.1",
+    "backstopjs": "5.0.1",
     "commitizen": "^4.2.2",
     "cssnano": "^5.0.11",
     "cz-conventional-changelog": "^3.2.0",
