--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-bump": "^0.8.0",
     "grunt-cli": "^1.3.2",
     "grunt-concurrent": "^3.0.0",
+    "grunt-contrib-compress": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-sass": "^3.1.0",
     "grunt-shell": "^3.0.1",
