--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cz-conventional-changelog": "^3.2.0",
     "grunt": "^1.1.0",
     "grunt-bump": "^0.8.0",
+    "grunt-cache-bust": "^1.7.0",
     "grunt-cli": "^1.3.2",
     "grunt-concurrent": "^3.0.0",
     "grunt-contrib-compress": "^2.0.0",
