--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "grunt-sass": "^3.1.0",
     "grunt-shell": "^3.0.1",
     "husky": "^7.0.4",
-    "node-sass": "^6.0.1",
     "postcss": "^8.3.11",
-    "prettier": "2.4.1"
+    "prettier": "2.4.1",
+    "sass": "^1.57.1"
   },
   "config": {
     "commitizen": {
@@ -47,6 +47,5 @@
   },
   "browserslist": [
     "defaults"
-  ],
-  "dependencies": {}
+  ]
 }
